--- a/hull-tactical-market-prediction/analyze.ipynb
+++ b/hull-tactical-market-prediction/analyze.ipynb
@@ -478,28 +478,68 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-29T07:14:39.295878Z",
-     "start_time": "2025-11-29T07:14:38.273174Z"
+     "end_time": "2025-11-29T09:25:50.474033Z",
+     "start_time": "2025-11-29T09:25:50.415417Z"
     }
    },
    "cell_type": "code",
-   "source": "",
+   "source": "data.describe()",
    "id": "8dfe3a1cac660357",
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "   date_id  prediction\n",
-       "0     8957         0.0\n",
-       "1     8958         0.0\n",
-       "2     8959         0.0\n",
-       "3     8960         0.0\n",
-       "4     8961         0.0\n",
-       "5     8962         0.0\n",
-       "6     8963         0.0\n",
-       "7     8964         0.0\n",
-       "8     8965         0.0\n",
-       "9     8966         0.0"
+       "           date_id           D1           D2           D3           D4  \\\n",
+       "count  9021.000000  9021.000000  9021.000000  9021.000000  9021.000000   \n",
+       "mean   4510.000000     0.031593     0.031593     0.047777     0.573994   \n",
+       "std    2604.282723     0.174923     0.174923     0.213307     0.494522   \n",
+       "min       0.000000     0.000000     0.000000     0.000000     0.000000   \n",
+       "25%    2255.000000     0.000000     0.000000     0.000000     0.000000   \n",
+       "50%    4510.000000     0.000000     0.000000     0.000000     1.000000   \n",
+       "75%    6765.000000     0.000000     0.000000     0.000000     1.000000   \n",
+       "max    9020.000000     1.000000     1.000000     1.000000     1.000000   \n",
+       "\n",
+       "                D5           D6           D7           D8           D9  ...  \\\n",
+       "count  9021.000000  9021.000000  9021.000000  9021.000000  9021.000000  ...   \n",
+       "mean      0.190445    -0.238111     0.045671     0.142667     0.143000  ...   \n",
+       "std       0.392674     0.425951     0.208783     0.349752     0.350092  ...   \n",
+       "min       0.000000    -1.000000     0.000000     0.000000     0.000000  ...   \n",
+       "25%       0.000000     0.000000     0.000000     0.000000     0.000000  ...   \n",
+       "50%       0.000000     0.000000     0.000000     0.000000     0.000000  ...   \n",
+       "75%       0.000000     0.000000     0.000000     0.000000     0.000000  ...   \n",
+       "max       1.000000     0.000000     1.000000     1.000000     1.000000  ...   \n",
+       "\n",
+       "                V6           V7           V8           V9  forward_returns  \\\n",
+       "count  8015.000000  7510.000000  8015.000000  4482.000000      9021.000000   \n",
+       "mean      0.288874     0.145886     0.303203     0.125155         0.000471   \n",
+       "std       0.312905     1.324779     0.350627     1.273912         0.010541   \n",
+       "min       0.000661    -2.027551     0.000661    -1.497420        -0.039754   \n",
+       "25%       0.000661    -0.795846     0.000661    -0.734003        -0.004319   \n",
+       "50%       0.182540    -0.100889     0.101852    -0.175851         0.000659   \n",
+       "75%       0.519841     0.791181     0.588790     0.678213         0.005896   \n",
+       "max       1.000000    12.678264     1.000000    12.997536         0.040661   \n",
+       "\n",
+       "       risk_free_rate  market_forward_excess_returns  lagged_forward_returns  \\\n",
+       "count     9021.000000                    9021.000000             9020.000000   \n",
+       "mean         0.000107                       0.000053                0.000470   \n",
+       "std          0.000088                       0.010558                0.010541   \n",
+       "min         -0.000004                      -0.040582               -0.039754   \n",
+       "25%          0.000008                      -0.004747               -0.004320   \n",
+       "50%          0.000097                       0.000255                0.000659   \n",
+       "75%          0.000193                       0.005479                0.005895   \n",
+       "max          0.000317                       0.040551                0.040661   \n",
+       "\n",
+       "       lagged_risk_free_rate  lagged_market_forward_excess_returns  \n",
+       "count            9020.000000                           9020.000000  \n",
+       "mean                0.000107                              0.000052  \n",
+       "std                 0.000088                              0.010558  \n",
+       "min                -0.000004                             -0.040582  \n",
+       "25%                 0.000008                             -0.004748  \n",
+       "50%                 0.000097                              0.000254  \n",
+       "75%                 0.000193                              0.005474  \n",
+       "max                 0.000317                              0.040551  \n",
+       "\n",
+       "[8 rows x 101 columns]"
       ],
       "text/html": [
        "<div>\n",
@@ -521,71 +561,233 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>date_id</th>\n",
-       "      <th>prediction</th>\n",
+       "      <th>D1</th>\n",
+       "      <th>D2</th>\n",
+       "      <th>D3</th>\n",
+       "      <th>D4</th>\n",
+       "      <th>D5</th>\n",
+       "      <th>D6</th>\n",
+       "      <th>D7</th>\n",
+       "      <th>D8</th>\n",
+       "      <th>D9</th>\n",
+       "      <th>...</th>\n",
+       "      <th>V6</th>\n",
+       "      <th>V7</th>\n",
+       "      <th>V8</th>\n",
+       "      <th>V9</th>\n",
+       "      <th>forward_returns</th>\n",
+       "      <th>risk_free_rate</th>\n",
+       "      <th>market_forward_excess_returns</th>\n",
+       "      <th>lagged_forward_returns</th>\n",
+       "      <th>lagged_risk_free_rate</th>\n",
+       "      <th>lagged_market_forward_excess_returns</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>8957</td>\n",
-       "      <td>0.0</td>\n",
+       "      <th>count</th>\n",
+       "      <td>9021.000000</td>\n",
+       "      <td>9021.000000</td>\n",
+       "      <td>9021.000000</td>\n",
+       "      <td>9021.000000</td>\n",
+       "      <td>9021.000000</td>\n",
+       "      <td>9021.000000</td>\n",
+       "      <td>9021.000000</td>\n",
+       "      <td>9021.000000</td>\n",
+       "      <td>9021.000000</td>\n",
+       "      <td>9021.000000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>8015.000000</td>\n",
+       "      <td>7510.000000</td>\n",
+       "      <td>8015.000000</td>\n",
+       "      <td>4482.000000</td>\n",
+       "      <td>9021.000000</td>\n",
+       "      <td>9021.000000</td>\n",
+       "      <td>9021.000000</td>\n",
+       "      <td>9020.000000</td>\n",
+       "      <td>9020.000000</td>\n",
+       "      <td>9020.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>8958</td>\n",
-       "      <td>0.0</td>\n",
+       "      <th>mean</th>\n",
+       "      <td>4510.000000</td>\n",
+       "      <td>0.031593</td>\n",
+       "      <td>0.031593</td>\n",
+       "      <td>0.047777</td>\n",
+       "      <td>0.573994</td>\n",
+       "      <td>0.190445</td>\n",
+       "      <td>-0.238111</td>\n",
+       "      <td>0.045671</td>\n",
+       "      <td>0.142667</td>\n",
+       "      <td>0.143000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.288874</td>\n",
+       "      <td>0.145886</td>\n",
+       "      <td>0.303203</td>\n",
+       "      <td>0.125155</td>\n",
+       "      <td>0.000471</td>\n",
+       "      <td>0.000107</td>\n",
+       "      <td>0.000053</td>\n",
+       "      <td>0.000470</td>\n",
+       "      <td>0.000107</td>\n",
+       "      <td>0.000052</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>8959</td>\n",
-       "      <td>0.0</td>\n",
+       "      <th>std</th>\n",
+       "      <td>2604.282723</td>\n",
+       "      <td>0.174923</td>\n",
+       "      <td>0.174923</td>\n",
+       "      <td>0.213307</td>\n",
+       "      <td>0.494522</td>\n",
+       "      <td>0.392674</td>\n",
+       "      <td>0.425951</td>\n",
+       "      <td>0.208783</td>\n",
+       "      <td>0.349752</td>\n",
+       "      <td>0.350092</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.312905</td>\n",
+       "      <td>1.324779</td>\n",
+       "      <td>0.350627</td>\n",
+       "      <td>1.273912</td>\n",
+       "      <td>0.010541</td>\n",
+       "      <td>0.000088</td>\n",
+       "      <td>0.010558</td>\n",
+       "      <td>0.010541</td>\n",
+       "      <td>0.000088</td>\n",
+       "      <td>0.010558</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>8960</td>\n",
-       "      <td>0.0</td>\n",
+       "      <th>min</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>-1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.000661</td>\n",
+       "      <td>-2.027551</td>\n",
+       "      <td>0.000661</td>\n",
+       "      <td>-1.497420</td>\n",
+       "      <td>-0.039754</td>\n",
+       "      <td>-0.000004</td>\n",
+       "      <td>-0.040582</td>\n",
+       "      <td>-0.039754</td>\n",
+       "      <td>-0.000004</td>\n",
+       "      <td>-0.040582</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>8961</td>\n",
-       "      <td>0.0</td>\n",
+       "      <th>25%</th>\n",
+       "      <td>2255.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.000661</td>\n",
+       "      <td>-0.795846</td>\n",
+       "      <td>0.000661</td>\n",
+       "      <td>-0.734003</td>\n",
+       "      <td>-0.004319</td>\n",
+       "      <td>0.000008</td>\n",
+       "      <td>-0.004747</td>\n",
+       "      <td>-0.004320</td>\n",
+       "      <td>0.000008</td>\n",
+       "      <td>-0.004748</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>8962</td>\n",
-       "      <td>0.0</td>\n",
+       "      <th>50%</th>\n",
+       "      <td>4510.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.182540</td>\n",
+       "      <td>-0.100889</td>\n",
+       "      <td>0.101852</td>\n",
+       "      <td>-0.175851</td>\n",
+       "      <td>0.000659</td>\n",
+       "      <td>0.000097</td>\n",
+       "      <td>0.000255</td>\n",
+       "      <td>0.000659</td>\n",
+       "      <td>0.000097</td>\n",
+       "      <td>0.000254</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>8963</td>\n",
-       "      <td>0.0</td>\n",
+       "      <th>75%</th>\n",
+       "      <td>6765.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.519841</td>\n",
+       "      <td>0.791181</td>\n",
+       "      <td>0.588790</td>\n",
+       "      <td>0.678213</td>\n",
+       "      <td>0.005896</td>\n",
+       "      <td>0.000193</td>\n",
+       "      <td>0.005479</td>\n",
+       "      <td>0.005895</td>\n",
+       "      <td>0.000193</td>\n",
+       "      <td>0.005474</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>8964</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>8965</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>8966</td>\n",
-       "      <td>0.0</td>\n",
+       "      <th>max</th>\n",
+       "      <td>9020.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>12.678264</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>12.997536</td>\n",
+       "      <td>0.040661</td>\n",
+       "      <td>0.000317</td>\n",
+       "      <td>0.040551</td>\n",
+       "      <td>0.040661</td>\n",
+       "      <td>0.000317</td>\n",
+       "      <td>0.040551</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>8 rows × 101 columns</p>\n",
        "</div>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 3
+   "execution_count": 6
   },
   {
    "metadata": {},
